JDF-173 Fix for whitespace wrapping for pre & monospace blocks

--- a/stylesheets/partials/_asciidoc.scss
+++ b/stylesheets/partials/_asciidoc.scss
@@ -63,7 +63,7 @@
   }
   
   span.monospaced, pre {
-    white-space: pre;
+    white-space: pre-wrap;
     word-wrap: normal;
     word-break: normal;
   }
